# project-A1B2c3d4

./: README.md  main.py  pyproject.toml  requirements.txt
src/handlers/: __init__.py  contact_handlers.py  note_handlers.py
src/models/: __init__.py  address_book.py  fields.py  note.py  notes_book.py  record.py
src/utils/: __init__.py  storage.py  validators.py
