[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant"
version = "1.0.0"
description = "CLI персональний помічник для керування контактами та нотатками"
requires-python = ">=3.10"

[project.scripts]
assistant = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main"]

[tool.setuptools.packages.find]
where = ["."]
